# acc-cosc-1337-spring-2019-rdawson210

./: .travis.yml  CMakeLists.txt  README.md  template.cpp  template.h
examples/: CMakeLists.txt
examples/01_module/05_if/: if.cpp  main.cpp
examples/01_module/06_if_else/: if_else.cpp  if_else.h
examples/01_module/07_switch/: main.cpp  switch.cpp  switch.h
examples/01_module_test/: 01_module_test.cpp
examples/03_module/04_do_while/: main.cpp  sample_do_while.cpp  sample_do_while.h
examples/03_module/05_for_ranged/: main.cpp  sample_for_ranged.cpp  sample_for_ranged.h
examples/03_module/06_value_and_reference_params/: main.cpp  sample_value_ref.cpp  sample_value_ref.h
examples/03_module_test/: 03_module_test.cpp
examples/04_module/: CMakeLists.txt
examples/04_module/01_bank/: CMakeLists.txt  atm.cpp  atm.h  bank_account.cpp  bank_account.h  checking_account.cpp  checking_account.h  customer.cpp  customer.h  main.cpp  savings_account.cpp  savings_account.h  transaction.cpp  transaction.h
examples/04_module/gui/: CMakeLists.txt  frame.cpp  panel.cpp  panel.h
examples/04_module_test/: 04_module_test.cpp  CMakeLists.txt
examples/07_module/: CMakeLists.txt  circle.cpp  circle.h  line.cpp  line.h  main.cpp  shape.cpp  shape.h
examples/07_module_test/: CMakeLists.txt
examples/08_module/: CMakeLists.txt  panel.cpp  panel.h
examples/09_module/: CMakeLists.txt  main.cpp  temperature.h  temperature_data.cpp  temperature_data.h
examples/10_module/: CMakeLists.txt  app.h  circle.cpp  circle.h  frame.cpp  frame.h  main.cpp  panel.cpp  panel.h  point.h  rectangle.cpp  rectangle.h  shape.h  text.cpp  text.h
examples/10_module_b/: CMakeLists.txt  app.cpp  circle.cpp  circle.h  clock.cpp  clock.h  clock_graphic.cpp  clock_graphic.h  line.cpp  line.h  panel.cpp  panel.h  point.h  shape.h  text.cpp  text.h
examples/11_module/: CMakeLists.txt
examples/11_module/01_ref_pointers/: CMakeLists.txt  main.cpp  ref_pointers.cpp  ref_pointers.h
examples/11_module/02_dynamic_memory/: CMakeLists.txt  dynamic_memory.cpp  dynamic_memory.h  main.cpp
examples/11_module/03_memory_leak/: CMakeLists.txt  main.cpp  memory_leak.cpp  memory_leak.h
examples/11_module/04_dangling_pointer/: CMakeLists.txt  dangling_pointer.cpp  dangling_pointer.h  main.cpp
examples/11_module_test/: 11_module_test.cpp  CMakeLists.txt
examples/12_module/: CMakeLists.txt
examples/13_module/: CMakeLists.txt
examples/13_module_test/: CMakeLists.txt
(+86 files in other folders)
