add_subdirectory(01_arrays_mem)
add_subdirectory(02_arrays_access)
add_subdirectory(03_arrays_for_range)
add_subdirectory(04_arrays_pointers)
add_subdirectory(05_arrays_functions)
add_subdirectory(06_arrays_char)
add_subdirectory(07_arrays_dyn_ch)
add_subdirectory(08_arrays_dyn_1)
add_subdirectory(09_arrays_dyn_2)
add_subdirectory(10_arrays_dyn_3)